Added tritanopia and tritanomaly. Added contrast indicators following WCAD 2 standard. Added text color picker. Changed color picker sizes. Minor visual changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Design for Color Blind</title>
     <link rel="stylesheet" type="text/css" href="./src/style/style.css">
+	<link rel="manifest" href="./manifest.json">
 </head>
 <body>
     <div class="header">
