--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Design for Color Blind</title>
     <link rel="stylesheet" type="text/css" href="./src/style/style.css">
-	<link rel="manifest" href="./manifest.json">
+		<link rel="manifest" href="./manifest.json">
+		<link rel="shortcut icon" href="./src/assets/icon_small.png">
 </head>
 <body>
 	<div class="appContainer">
